<resources>
    <string name="app_name">EventDo</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_title">Sign up</string>
    <string name="calendar_phrase">Events are automatically added to your calendar</string>
    <string name="subtitle">- fast, easy and completely free</string>
    <string name="how_it_works">How it works!</string>
    <string name="you_sign_up_quickly_and_easily_with_your_mobile_number">You sign up quickly and easily with your mobile number</string>
    <string name="book">Book</string>
    <string name="you_book">You book a service and connected companies send the reservation to the eventDo app</string>
    <string name="added_to_your_calendar">Added to your calendar</string>
    <string name="automatic_reservation">The eventDo app is automatically adding the reservation to your calendar</string>
    <string name="sending_code_instructions">Enter your mobile number and we will send a one-time code via SMS to verify your number</string>
    <string name="send_a_one_time_code">Send a one-time code</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="continuing">By continuing you accept our</string>
    <string name="and">and</string>
    <string name="terms_of_use">terms of use</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="privacy_policy_link">https://eventdo.se/english/privacy-policy.html</string>
    <string name="about_us_link">https://eventdo.se/english/index.html</string>
    <string name="verification">Verification</string>
    <string name="enter_code">Enter the code you received via SMS</string>
    <string name="terms_link">https://eventdo.se/english/terms-of-use.html</string>
    <string name="proper_phone">Please enter your mobile number</string>
    <string name="events">Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="you_have_no_events_upcoming">You have no upcoming events</string>
    <string name="you_have_no_events_past">You have no past events</string>
    <string name="drawer_about">About eventDo</string>
    <string name="drawer_rate_us">Rate us</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_my_account">My account</string>
    <string name="drawer_tell_a_friend">Tell a friend</string>
    <string name="version_0_4" translatable="false">Version 1.4.0</string>
    <string name="drawer_open" translatable="false">drawerOpen</string>
    <string name="drawer_close" translatable="false">drawerClose</string>
    <string name="settings">Settings</string>
    <string name="auto_add_events">Auto Add events</string>
    <string name="automatically_add_events_from_eventdo_to_my_calendar">Automatically add events from eventDo to my calendar</string>
    <string name="show_new_event_page">Show \"New event page\"</string>
    <string name="show_desc">Show a pre-filled \"New Event Page\" before adding events to my calendar</string>
    <string name="calendar_sync">Calendar sync</string>
    <string name="cal_desc">Select a calendar to which received events will be added</string>
    <string name="my_account">My account</string>
    <string name="mobile_number">Mobile number:</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="email" translatable="false">Email</string>
    <string name="save">Save</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="new_event" translatable="false">New Event</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="all_day" translatable="false">All-day</string>
    <string name="starts">Starts</string>
    <string name="ends" translatable="false">Ends</string>
    <string name="repeat">Repeat</string>
    <string name="travel_time" translatable="false">Travel time</string>
    <string name="calendar">Calendar</string>
    <string name="show_as">Show as</string>
    <string name="add_attachment" translatable="false">Add attachment...</string>
    <string name="url" translatable="false">URL</string>
    <string name="notes" translatable="false">Notes</string>
    <string name="alert" translatable="false">Alert</string>
    <string name="invitees" translatable="false">Invitees</string>
    <string name="send_with">Send with</string>
    <string name="chooser_link">Hello,
I want to tell you about an awesome app. Check out https://www.eventdo.se/english</string>
    <string name="denied_calendar_access_text_write">You will not be able to write the default calendar</string>
    <string name="denied_calendar_access_text_read">You will not be able to read the default calendar</string>
    <string name="event_saved">Event saved to calendar!</string>
    <string name="sign_up_internet_fail">Sign up failed. Check your internet connection and try again</string>
    <string name="verification_internet_fail">Verification failed. Check your internet connection and try again.</string>
    <string name="my_account_internet_fail">Account details could not be retrieved. Check your internet connection and try again.</string>
    <string name="update_account_internet_fail">Account details cannot not be saved. Check your internet connection and try again.</string>
    <string name="delete_account_internet_fail">Unable to delete account. Check your internet connection and try again.</string>
    <string name="download_events_internet_fail">No internet connection. Please check your internet connection and try again.</string>
    <string name="email_invalid">Please enter a valid e-mail address</string>
    <string name="account_detail_updated">The account details have been updated</string>
    <string name="code_not_correct">Code is not correct, please try again</string>
    <string name="ok" translatable="false">OK</string>
    <string name="account_deleted_title">Account deleted</string>
    <string name="account_deleted_message">We are sorry to see you leaving us, but your account is now removed. Welcome back!</string>
    <string name="show_calendar">Show Calendar</string>
    <string name="event_deleted">Event deleted from calendar</string>
    <string name="first_name_my_account">First name</string>
    <string name="surname_my_account">Surname</string>
    <string name="email_my_account">Email</string>
    <string name="save_event_main_fragment">Save event</string>
    <string name="cancel_main_fragment">Cancel</string>
    <string name="add_main_fragment">Add \</string>
    <string name="to_cal_main"> \ to the calendar?</string>
    <string name="event_already_there">Event is already in calendar</string>
    <string name="event">Event</string>
    <string name="already_there">is already in calendar</string>
    <string name="delete_main">DELETE</string>
    <string name="account_delete_text">Are you sure you want to delete your account including all data stored at eventDo? This action cannot be undone.</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="notify_me_when_the_new_event_is_received">Notify me when the new event is received</string>
    <string name="events_added_to_calendar">Event added to calendar</string>
    <string name="code_verified_correctly">code Verified correctly</string>
    <string name="calendar_access_denied">You won\'t access the calendar</string>
</resources>
