<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rad4m.eventdo.ui.mainfragment.MainViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/menuDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/events"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpcoming"
                style="@style/main_button"
                android:onClick="@{() -> viewModel.upcomingButton()}"
                android:text="@string/upcoming"
                android:textColor="@{viewModel.upcomingTextColor}"
                app:layout_constraintEnd_toStartOf="@+id/buttonPast"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPast"
                style="@style/main_button"
                android:onClick="@{() -> viewModel.pastButton()}"
                android:text="@string/past"
                android:textColor="@{viewModel.pastTextColor}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/buttonUpcoming"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@+id/buttonUpcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerEvents"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:eventList="@{viewModel.dataItemList}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blank"
                android:visibility="@{viewModel.emptyListInfoVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{viewModel.emptyListInfoVisibility}"
                android:text="@{viewModel.emptyListText}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:duplicateParentState="true"
            app:headerLayout="@layout/drawer_header_layout"
            app:menu="@menu/menu_drawer">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/version_margin"
                android:gravity="center"
                android:text="@string/version_0_4"
                android:textColor="@android:color/darker_gray" />
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>